fix too big article text on phones

--- a/css/main.scss
+++ b/css/main.scss
@@ -1347,6 +1347,9 @@ img:not(.img-gallery) {
 	.display-4 {
 		font-size: 1.75rem
 	}
+	.h2 {
+		font-size: 1.25rem !important
+	}
 }
 @media screen and (min-width: 1000px) {
 	.small-screen-warning {
